--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -30,7 +30,7 @@
                             </div>
 
                             <div class="d-flex justify-content-center">
-                                <button class="btn btn-lg btn-personalizado" type="submit">Iniciar Sesión</button>
+                                <button class="btn btn-lg btn-colorsib" type="submit">Iniciar Sesión</button>
                             </div>
 
                         </form>
