--- a/src/app/shared/layout-admin/layout-admin.component.html
+++ b/src/app/shared/layout-admin/layout-admin.component.html
@@ -28,13 +28,15 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                     <li><a class="dropdown-item" href="#">Perfil</a></li>
-                    <!--<li><a class="dropdown-item" href="#" (click)="logout()">Cerrar Sesión</a></li>-->
+                    <li><a class="dropdown-item" href="#" (click)="logout()">Cerrar Sesión</a></li>
                 </ul>
             </div>
         </div>
         <!-- Contenido Principal -->
-        <div class="bg-light flex-grow-1 content-area">
-            <router-outlet></router-outlet>
+        <div class="bg-light flex-grow-1">
+            <div class="content-area">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
 </div>
