--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,16 @@ span {
 * {
     font-family: 'Nunito Sans', sans-serif;
 }
+
+.btn-colorsib {
+    color: white;
+    background-color: #014a2c;
+    border: 2px solid #014a2c;
+}
+
+.btn-colorsib:hover {
+    color: #014a2c;
+    background-color: white;
+    border-color: #014a2c;
+    font-weight: bold;
+}
