--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,8 @@ h3,
 h4,
 h5,
 label {
-    color: #014a2c;
-    font-weight: bold;
+    color: #014a2c !important;
+    font-weight: bold !important;
 }
 
 label {
